--- a/src/components/cards/CardHeader/CardHeader.module.pcss
+++ b/src/components/cards/CardHeader/CardHeader.module.pcss
@@ -3,7 +3,7 @@
     align-items:    center;
     flex-direction: row;
     gap:            var(--sp-sm);
-    padding-bottom: var(--sp-sm);
+    padding-bottom: var(--sp-md);
 
     h5 {
         color: var(--color-grey-medium)
