--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -58,5 +58,5 @@
     background-color: var(--color-base-background);
     border:           1px solid var(--color-grey-dark);
     border-radius:    var(--st-br-md);
-    padding:          var(--sp-sm);
+    padding:          var(--sp-md);
 }
